Did some minor cleanup, added a new page "DjDashboard", which currenlty takes data from hard-coded lists in the razor.cs file, so API isn't being used yet. It shows the top 10 songs with highest scores and a list of all of the songs (unordered, no cap), where the user can select one or multiple songs and delete them. Under this table there is an input field, which searches the list for maching songs. Upon clicking on a song, the mentioned song gets added onto the list.

--- a/Components/Pages/Prijava.razor
+++ b/Components/Pages/Prijava.razor
@@ -131,7 +131,7 @@
     </style>
 </head>
 
-<section id="login-hero" class="hero-section text-center">
+<section class="text-center hero">
     <div class="container">
         <h1 class="display-2"><b>Prijava in Registracija</b></h1>
         <p class="lead" style="font-size:1.5rem">Prijavite se ali ustvarite nov račun za dostop do aplikacije.</p>
