--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -256,18 +256,37 @@ navbar.scrolled nav-link a {
     font-weight: bold;
 }
 
-#login-hero {
-    padding-top: 115px !important;
-    background-size:cover;
-    background-position: 0px -200px;
-    background-image: url('Images/bg3.png');
-    padding: 50px 0;
-    margin: 0px;
-    color: #ffffff;
-}
-
 #profile-card-header {
     background-size: 152%;
     background-position: 0px 0px;
     background-image: url('Images/bg3.png');
+}
+
+
+/*posploseno*/
+
+.default-page-dark {
+    background-color: #0a0a0a;
+    color: #ffffff;
+    font-family: montserrat;
+}
+
+.hero {
+    padding-top: 65px !important;
+    background-size: cover;
+    background-position: 0 0;
+    background-image: url('../Images/bg3.png');
+    padding: 45px 0;
+    margin: 0px;
+    color: #ffffff;
+    width: 100vw;
+    text-align: center;
+}
+
+    .hero h1 {
+        font-weight: 800;
+    }
+
+.bottom-section{
+    padding-bottom: 5vh;
 }
