--- a/Components/Pages/Prijava.razor
+++ b/Components/Pages/Prijava.razor
@@ -3,133 +3,9 @@
 
 <PageTitle>Prijava</PageTitle>
 
-<head>
-    <style>
-        body {
-            background-color: #0a0a0a;
-            color: #ffffff;
-            font-family: 'Arial', sans-serif;
-        }
-
-        .navbar, .footer {
-            background-color: #1a1a1a;
-        }
-
-        .navbar-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: #ff499e !important;
-        }
-
-        .nav-link {
-            color: #ffffff !important;
-        }
-
-            .nav-link:hover {
-                color: #49b6ff !important;
-            }
-
-
-        .card {
-            background-color: #1a1a1a;
-            border: none;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-            .card:hover {
-                transform: translateY(-10px);
-                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            }
-
-        .card-header {
-            background-color: #121416;
-            color: #FF2E63;
-            font-weight: bold;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .card-body {
-            color: white;
-            padding: 20px;
-        }
-
-        .form-group {
-            position: relative;
-            margin-bottom: 30px; 
-        }
-
-            .form-group label {
-                position: absolute;
-                top: -10px;
-                left: 10px;
-                font-size: 0.9rem;
-                color: #ffffff;
-                font-weight: bold;
-            }
-
-        .form-control {
-            background-color: #2a2a2a;
-            border: none;
-            color: #ffffff;
-            padding: 12px;
-            border-radius: 5px;
-            width: 100%;
-            box-sizing: border-box;
-        }
-
-            .form-control:focus {
-                background-color: #3a3a3a;
-                color: #ffffff;
-            }
-
-        .input-icon {
-            position: absolute;
-            top: 50%;
-            left: 10px;
-            transform: translateY(-50%);
-            color: #ffffff;
-        }
-
-        .btn-primary {
-            background-color: #49b6ff;
-            border-color: #49b6ff;
-            font-weight: bold;
-            width: 100%;
-        }
-
-            .btn-primary:hover {
-                background-color: #779be7;
-                border-color: #779be7;
-            }
-
-        .btn-secondary {
-            background: #FF2E63;
-            border-color: #FF2E63;
-            font-weight: bold;
-            width: 100%;
-        }
-
-            .btn-secondary:hover {
-                background: #ff1a4a;
-                border-color: #ff1a4a;
-            }
-
-        .text-center {
-            text-align: center;
-        }
-
-        .mt-4 {
-            margin-top: 1.5rem;
-        }
-
-        .mb-4 {
-            margin-bottom: 1.5rem;
-        }
-    </style>
-</head>
+<HeadContent>
+    <link href="css/Login.css" rel="stylesheet" />
+</HeadContent>
 
 <section class="text-center hero">
     <div class="container">
@@ -138,11 +14,11 @@
     </div>
 </section>
 
-<section class="feature-section" style="padding-top:100px">
+<section class="default-page-dark feature-section" style="padding-top:100px">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card" style="border:2px solid white">
+                <div class="card">
                     <div class="card-header">
                         <i class="fas fa-sign-in-alt feature-icon"></i> <b style="font-size:1.5rem">Prijava</b>
                     </div>
@@ -162,15 +38,15 @@
                                 </div>
                                 <input id="password" type="password" class="form-control" placeholder="Geslo" required>
                             </div>
-                            <button type="submit" class="btn btn-primary">Prijava</button>
+                            <button type="submit" class="btn btn-primary button-fancy-blue w-100">Prijava</button>
                         </form>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card" style="border:2px solid white">
+                <div class="card">
                     <div class="card-header">
-                        <i class="fas fa-user-plus feature-icon"></i> <b style="font-size:1.5rem; color: #49b6ff">Registracija</b>
+                        <i class="fas fa-user-plus feature-icon"></i> <b style="font-size:1.5rem">Registracija</b>
                     </div>
                     <div class="card-body">
                         <form>
@@ -195,7 +71,7 @@
                                 </div>
                                 <input id="password-register" type="password" class="form-control" placeholder="Geslo" required>
                             </div>
-                            <button type="submit" class="btn btn-secondary">Registracija</button>
+                            <button type="submit" class="btn btn-secondary button-fancy w-100">Registracija</button>
                         </form>
                     </div>
                 </div>
