--- a/wwwroot/css/DjDashboard.css
+++ b/wwwroot/css/DjDashboard.css
@@ -17,6 +17,12 @@
         font-size: 45px;
     }
 
+    .toggle-text{
+        font-size: 20px;
+        margin-bottom:10px;
+        margin-right: 3px;
+    }
+
     #dj-event-selection{
         margin: 2rem 0 2rem 0;
     }
@@ -106,10 +112,96 @@ button.btn-danger {
 
 
 .add-song-container {
-    padding-top: 1vh;
+    padding-top: 4vh;
     padding-bottom: 5vh;
 }
 
 small {
     color: #0099D1;
 }
+
+button {
+    padding: 17px 40px;
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+    background-color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.05) 0 0 8px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 15px;
+    transition: all 0.5s ease;
+}
+
+    button:hover {
+        letter-spacing: 3px;
+        background-color: #ff4d4d;
+        color: #ffffff;
+        box-shadow: #ff4d4d 0px 7px 29px 0px;
+    }
+
+    button:active {
+        letter-spacing: 3px;
+        background-color: #ff4d4d;
+        color: #ffffff;
+        box-shadow: #a6a6a6 0px 0px 0px 0px;
+        transform: translateY(10px);
+        transition: 100ms;
+    }
+
+
+
+
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+}
+
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    width: 3.4em;
+    height: 1.6em;
+    inset: 0;
+    background: #333;
+    border-radius: 20px;
+    transition: all 0.4s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 1em;
+        width: 1em;
+        left: 0.3em;
+        bottom: 0.3em;
+        background-color: white;
+        border-radius: 50px;
+        box-shadow: 0 0px 20px rgba(0,0,0,0.4);
+        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
+.switch input:checked + .slider {
+    background: #0099D1;
+}
+
+.switch input:focus + .slider {
+    box-shadow: 0 0 1px #b84fce;
+}
+
+.switch input:checked + .slider:before {
+    transform: translateX(1.6em);
+    width: 1.6em;
+    height: 1.6em;
+    bottom: 0;
+}
+
