--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,8 +1,14 @@
-﻿<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+﻿@inject Dj.Services.AppState AppState
+@inject NavigationManager Navigation
+@inject Blazored.LocalStorage.ILocalStorageService LocalStorage
+
+<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
 <nav id="mainNavbar" class="navbar navbar-expand-lg navbar-light transparent sticky-top">
     <div class="container-fluid">
-        <NavLink class="navbar-brand" href=""><img src="/Images/logo-152.png" /></NavLink>
+        <NavLink class="navbar-brand" href="">
+            <img src="/Images/logo-152.png" />
+        </NavLink>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,16 +20,28 @@
                         <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Domov
                     </NavLink>
                 </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="prijava">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Prijava/Registracija
-                    </NavLink>
-                </li>
-                <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="profil">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Moj profil
-                    </NavLink>
-                </li>
+
+                @if (AppState.IsLoggedIn)
+                {
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="profil">
+                            <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Moj profil
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <a class="nav-link" @onclick="Logout">
+                            <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Odjava
+                        </a>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="prijava">
+                            <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Prijava/Registracija
+                        </NavLink>
+                    </li>
+                }
             </ul>
         </div>
     </div>
@@ -42,3 +60,25 @@
     });
 </script>
 
+@code {
+    protected override void OnInitialized()
+    {
+        AppState.OnChange += () => InvokeAsync(StateHasChanged);
+
+    }
+
+    private async Task Logout()
+    {
+        await LocalStorage.RemoveItemAsync("token");
+        await LocalStorage.RemoveItemAsync("user");
+
+        AppState.SetLoggedIn(false, null);
+
+        Navigation.NavigateTo("/");
+    }
+
+    public void Dispose()
+    {
+        AppState.OnChange -= StateHasChanged;
+    }
+}
