--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>Aplikacija za priporočanje glasbe DJ-jem</PageTitle>
 
+<HeadContent>
+    <link href="css/Home.css" rel="stylesheet" />
+</HeadContent>
+
 <!DOCTYPE html>
 <html lang="sl">
 <head>
@@ -10,195 +14,6 @@
     <title>DJ Glasba Priporočila</title>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
-    <style>
-        body {
-            background-color: #0a0a0a;
-            color: #ffffff;
-            font-family: 'Arial', sans-serif;
-        }
-
-        top-row {
-        z-index:5 !important;
-        
-        }
-
-        .navbar, .footer {
-            background-color: #1a1a1a;
-        }
-
-        .navbar-brand {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: #ff499e !important;
-        }
-
-        .nav-link {
-            color: #ffffff !important;
-        }
-
-            .nav-link:hover {
-                color: #49b6ff !important;
-            }
-
-
-
-            .btn-primary:hover {
-                background-color: #779be7;
-                border-color: #779be7;
-            }
-
-
-        .btn-secondary{
-            background: #FF2E63;
-        
-        }
-
-        .card {
-            background-color: #1a1a1a;
-            border: none;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border-radius:10px;
-            overflow:hidden;
-        }
-
-            .card:hover {
-                transform: translateY(-10px);
-                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-            }
-
-        .card-header {
-            background-color: #121416;
-            color: #FF2E63;
-            font-weight: bold;
-            padding:0px;
-        }
-
-        .card-body {
-            color: white;
-        }
-
-        .feature-icon {
-            font-size: 2rem;
-            color: #49b6ff;
-        }
-
-        .feature-section {
-            padding: 140px 0;
-        }
-
-            .feature-section h2 {
-                font-size: 2.5rem;
-                font-weight: bold;
-                margin-bottom: 40px;
-
-            }
-
-     
-
-        .img-fluid {
-            border-radius: 10px;
-        }
-
-        .header-image {
-            width: 100%;
-            height: auto;
-            margin-top: 0px;
-            padding:0px;
-        border-radius:0px;
-        }
-
-
-        .container
-        {
-            font-size: 1.25rem;
-        
-        }
-
-        .flip-card {
-            background-color: transparent;
-            width: 100%;
-            height: 300px;
-            perspective: 1000px;
-            margin-bottom: 20px;
-        }
-
-        .flip-card-inner {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            text-align: center;
-            transition: transform 1.1s;
-            transform-style: preserve-3d;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .flip-card:hover .flip-card-inner {
-            transform: rotateY(180deg);
-        }
-
-        .flip-card-front,
-        .flip-card-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            border-radius: 10px;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .flip-card-front {
-            background-color: #1a1a1a;
-            color: white;
-            border: 2px solid #49b6ff;
-        }
-
-        .flip-card-back {
-            background-color: #49b6ff;
-            color: white;
-            transform: rotateY(180deg);
-        }
-
-        .flip-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-
-        .flip-card p {
-            font-size: 1rem;
-        }
-
-     
-        .flip-card-primary .flip-card-front {
-            background-color: #49b6ff;
-            color: white;
-            border: 2px solid #49b6ff;
-        }
-
-        .flip-card-primary .flip-card-back {
-            background-color: #49b6ff;
-            color: white;
-            transform: rotateY(180deg);
-        }
-
-      
-        .flip-card-secondary .flip-card-front {
-            background-color: #FF2E63; 
-            color: white;
-            border: 2px solid #FF2E63;
-        }
-
-        .flip-card-secondary .flip-card-back {
-            background-color: #FF2E63;
-            color: white;
-            transform: rotateY(180deg);
-        }
-
-    </style>
 </head>
 <body>
 
@@ -206,8 +21,8 @@
         <div class="container">
             <h1 class="display-1"><b>DJ Asistent</b></h1>
             <p class="lead" style="font-size:1.5rem">Izboljšajte komunikacijo med DJ-jem in publiko ter ustvarite dinamično atmosfero na vsaki zabavi.</p>
-            <a href="#about" class="btn btn-primary btn-lg">Več o nas</a>
-            <a href="#features" class="btn btn-secondary btn-lg">Funkcionalnosti</a>
+            <button class="button-fancy-hollow" onclick="location.href='#about'">Več o nas</button>
+            <button class="button-fancy" onclick="location.href='#features'">Funkcionalnosti</button>
         </div>
     </section>
 
@@ -254,7 +69,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card" style="border:2px solid white">
-                 
+
                         <img src="\Images\6.jpg" style="height:300px; width:100%; object-fit:cover" class="img-fluid header-image" />
                         <div class="card-header" style="padding:5px">
                             <i class="fas fa-trophy feature-icon" style="padding:10px 20px 10px 10px"></i> <b style="font-size:1.5rem">Lestvice z Točkami</b>
@@ -273,7 +88,7 @@
         <div class="container">
             <h2 class="text-center mb-4" style="margin-top:-50px;">KAKO SE UPORABLJA?</h2>
             <div class="row" style="padding-top:40px">
-            
+
                 <div class="col-md-6 mb-4">
                     <div class="flip-card flip-card-primary">
                         <div class="flip-card-inner">
@@ -288,7 +103,7 @@
                     </div>
                 </div>
 
-               
+
                 <div class="col-md-6 mb-4">
                     <div class="flip-card flip-card-secondary">
                         <div class="flip-card-inner">
