--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -33,6 +33,7 @@ else
                             <Dropdown Title="Dogodki">
                                 <li><NavLink class="dropdown-item navbar-dropdown-item" href="djdash">DJ Dashboard</NavLink></li>
                                 <li><NavLink class="dropdown-item navbar-dropdown-item" href="dogodek_dodaj">Nov Dogodek</NavLink></li>
+                                <li><NavLink class="dropdown-item navbar-dropdown-item" href="guestpage">Izberi pesem</NavLink></li>
                             </Dropdown>
                         </li>
 
