--- a/Pages/Prijava.razor
+++ b/Pages/Prijava.razor
@@ -123,7 +123,7 @@
             await LocalStorage.SetItemAsync("token", loginResponse.Token);
             await LocalStorage.SetItemAsync("user", loginResponse.User);
 
-            AppState.SetLoggedIn(true, loginResponse.User);
+            await AppState.SetLoggedInAsync(true, loginResponse.User);
 
             message = $"Prijava uspešna! Prejeli smo token: {loginResponse.Token}";
             NavigationManager.NavigateTo("/");
