--- a/Pages/Prijava.razor
+++ b/Pages/Prijava.razor
@@ -234,10 +234,10 @@
     public class RegisterModel
     {
         [JsonPropertyName("name")]
-        public string Name { get; set; } = "unspecified";
+        public string Name { get; set; } = string.Empty;
 
         [JsonPropertyName("familyName")]
-        public string FamilyName { get; set; } = "unspecified";
+        public string FamilyName { get; set; } = string.Empty;
 
         [JsonPropertyName("imageUrl")]
         public string ImageUrl { get; set; } = "https://cdn-icons-png.flaticon.com/512/6342/6342563.png";
