--- a/Pages/EventAdd.razor
+++ b/Pages/EventAdd.razor
@@ -14,7 +14,7 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-10">
+                <div class="col-md-10 mt-4">
                     <div class="card">
                         <div class="card-header">
                             <i class="fas fa-sign-in-alt feature-icon"></i> <b style="font-size:1.5rem">Dodajte svoj nov dogodek</b>
