--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -10,6 +10,10 @@ body {
     color: #ffffff;
 }
 
+.page{
+    overflow-x: hidden;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
@@ -19,6 +23,7 @@ a, .btn-link {
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
+
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
@@ -545,3 +550,12 @@ select:-webkit-autofill {
     -webkit-text-fill-color: #fff !important;
     transition: background-color 5000s ease-in-out 0s;
 }
+
+button.nav-link.dropdown-toggle {
+    background-color: transparent !important;
+    border: 0;
+}
+
+    button.nav-link.dropdown-toggle:hover {
+        color: #FF2E63;
+    }
