Dodal banner na stran za Glasovanje

--- a/Pages/GuestPage.razor
+++ b/Pages/GuestPage.razor
@@ -3,7 +3,10 @@
 @using Dj.Services
 @inject ApiService ApiService
 
+<div class="hero"><h1 class="display-2" tabindex="-1"><b>Glasovanje</b></h1></div>
+
 <div class="container my-4">
+
     <div class="card shadow-lg p-4 rounded-3">
         <h2 class="text-center mb-4">Izberi dogodek</h2>
 
